# jumlaos

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  TERMS.md  package.json  pnpm-lock.yaml  renovate.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 20260427_0001_init.py  20260427_0002_rls.py  20260427_0003_triggers.py  20260427_0004_idempotency.py  20260427_0005_auth_and_wa.py  20260427_0006_debtor_ice.py  20260427_0007_procrastinate.py  20260428_0008_audit_outbox_and_idempotency.py  20260430_0009_event_subscriber_offsets.py  20260430_0010_tighten_triggers.py
apps/api/scripts/: check_module_boundaries.py
apps/api/src/jumlaos/: __init__.py  config.py  logging.py  main.py
apps/api/src/jumlaos/core/: __init__.py  audit.py  context.py  db.py  deps.py  errors.py  events.py  idempotency.py  models.py  rate_limit.py  security.py
apps/api/src/jumlaos/core/routes/: __init__.py  auth.py  health.py  me.py  memberships.py
apps/api/src/jumlaos/makhzen/: __init__.py  models.py
apps/api/src/jumlaos/mali/: __init__.py  models.py  routes.py  schemas.py  service.py
apps/api/src/jumlaos/scripts/: replay_dlq.py  seed_demo.py
apps/api/src/jumlaos/shared/: __init__.py  ids.py  money.py  otp_transport.py  phone.py  time.py
apps/api/src/jumlaos/shared/adapters/: __init__.py  crypto.py  sms.py  whatsapp.py
apps/api/src/jumlaos/talab/: __init__.py  models.py  routes.py
apps/api/src/jumlaos/whatsapp/: __init__.py  routes.py
apps/api/src/jumlaos/workers/: __init__.py  app.py  context.py  entrypoint.py  tasks.py
apps/api/tests/: conftest.py  test_app_boot.py  test_audit_p0.py  test_crypto.py  test_ids.py  test_ledger_invariant.py  test_log_redaction.py  test_mali_service.py  test_module_boundaries.py  test_money.py  test_phone.py  test_prod_boot_security.py  test_security.py  test_worker_context.py
apps/api/tests/integration/: conftest.py  test_authz.py  test_mali_authz.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/messages/: ar-MA.json  fr-MA.json
apps/web/public/: manifest.webmanifest
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css
apps/web/src/app/[locale]/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/[locale]/auth/: page.tsx
apps/web/src/app/[locale]/dashboard/: page.tsx
apps/web/src/app/[locale]/debtors/: page.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  input.tsx
apps/web/src/i18n/: request.ts  routing.ts
apps/web/src/lib/: api.ts
docs/: ABOUT.md  RECOMMENDATIONS.md  admin-user-guide.md  architecture.md  deployment.md  known-limitations.md  plan.md  remaining-fixes.md  security-checklist.md  security.md
docs/audit/: unfixed.md
docs/release-notes/: v0.1.0-beta.md
docs/runbooks/: ha.md  procrastinate-driver.md
infra/: docker-compose.dev.yml
infra/fly/: api.fly.toml  worker.fly.toml
